# smart-talent-selection

./: .env.example  .gitignore  AGENTS.md  APPROACH.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: candidates.py  health.py  job_descriptions.py  job_roles.py  resumes.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py  sync_session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  candidate.py  candidate_experience.py  candidate_skill.py  job_description.py  job_match.py  job_role.py  job_scoring_config.py  resume_upload.py
backend/app/schemas/: candidate_profile.py  job_description.py  job_role.py  resume_upload.py  scoring_config.py
backend/app/services/: job_role_service.py  scoring_config_service.py  storage.py  upload_service.py
backend/app/services/jd/: manager.py
backend/app/services/parsing/: azure_di_client.py  candidate_persister.py  embedding_builder.py  embedding_generator.py  experience_calculator.py  fallback_client.py  gemini_extractor.py  hyperlink_extractor.py  issuer_normaliser.py  jd_extractor.py  ner_extractor.py  regex_extractor.py  skill_normaliser.py  text_extractor.py  text_normaliser.py
backend/app/services/ranking/: justifier.py  ranking_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  parse_resume.py  ranking.py
backend/scripts/: seed.py  test_ranking.py  test_storage.py
(+28 files in other folders)
