[project]
name = "smart-talent-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "google-generativeai>=0.5.4",
    "groq>=0.9.0",
    "openai>=1.30.1",
    "azure-ai-documentintelligence>=1.0.0b3",
    "supabase>=2.4.0",
    "prometheus-fastapi-instrumentator>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
